--- a/WheelChef(Chef)/app/src/main/res/values/colors.xml
+++ b/WheelChef(Chef)/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="color_primary">#e64e40</color>
     <color name="color_primary_dark">#c94438</color>
     <color name="shadow_transparent">#33000000</color>
-    <color name="amber">#FFC107</color>
+    <color name="color_accent">#FFAB00</color>
     <color name="single_line_line">#CDC5BA</color>
     <color name="window_dark">#303030</color>
 </resources>
