--- a/WheelChef(Chef)/app/src/main/res/values/dimens.xml
+++ b/WheelChef(Chef)/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="navigation_drawer_width">280dp</dimen>
     <dimen name="default_elevation">2dp</dimen>
+    <dimen name="fab_margin">0dp</dimen>
 </resources>
