--- a/WheelChef(Chef)/app/src/main/res/layout/activity_create_dish.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/activity_create_dish.xml
@@ -50,14 +50,16 @@
                 android:layout_gravity="center"
                 android:layout_weight="3">
                 <TextView
+                    android:id="@+id/textview_add_dish_photo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add an image for your dish"
                     android:layout_gravity="center"/>
                 <ImageView
                     android:id="@+id/imageview_dish_photo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:scaleType="fitCenter"/>
             </FrameLayout>
 
             <com.rey.material.widget.ImageButton
