--- a/WheelChef(Chef)/app/src/main/res/layout/fragment_home.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/layout_home_swipe"
         android:layout_centerHorizontal="true">
     <ListView
-        android:id="@+id/notes_list"
+        android:id="@+id/dishes_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
