--- a/WheelChef(Chef)/app/src/main/res/layout/fragment_order.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/fragment_order.xml
@@ -1,6 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.wheelchef.wheelchefchef.main.OrderFragment">
 
     <ListView
@@ -12,5 +14,19 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0dp"/>
+
+    <com.rey.material.widget.Button
+        android:background="@color/color_primary"
+        style="@style/FlatWaveColorButtonRippleStyle"
+        android:id="@+id/btn_view_order_detail"
+        android:text="Order Detail"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="10dp"
+        app:rd_enable="true"
+        app:rd_rippleType="wave"
+        app:rd_delayClick="afterRelease"/>
 
 </FrameLayout>
