--- a/WheelChef(Chef)/app/src/main/res/layout/card_view_dish.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/card_view_dish.xml
@@ -4,19 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="280dp"
     android:layout_height="140dp"
-    android:layout_margin="10dp">
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="@color/color_primary">
+        android:background="@color/color_accent">
 
         <ImageView
             android:id="@+id/imageview_dish_photo"
             android:layout_width="88dp"
             android:layout_height="140dp"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitStart"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -24,8 +24,11 @@
             android:layout_margin="10dp"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/textview_dish_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="20dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
@@ -33,20 +36,22 @@
                 <com.rey.material.widget.ImageButton
                     android:id="@+id/btn_delete_dish"
                     style="@style/FlatWaveColorButtonRippleStyle"
-                    android:layout_width="81dp"
+                    android:layout_width="0dp"
                     android:layout_height="81dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_delete_white_36dp"
                     app:rd_delayClick="afterRelease"
+                    android:layout_weight="1"
                     android:layout_marginRight="10dp"/>
                 <com.rey.material.widget.ImageButton
                     android:id="@+id/btn_edit_dish"
                     style="@style/FlatWaveColorButtonRippleStyle"
-                    android:layout_width="81dp"
+                    android:layout_width="0dp"
                     android:layout_height="81dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_create_white_36dp"
-                    app:rd_delayClick="afterRelease"/>
+                    app:rd_delayClick="afterRelease"
+                    android:layout_weight="1"/>
 
             </LinearLayout>
 
